manifests/pocketid/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocketid
  namespace: pocketid
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`id.smeyer.ca`)
      kind: Rule
      services:
        - name: pocketid
          port: 80
